tests/files/lexer_tests/should_fail/085.cmdr
//Should not parse since no semicolon
timeout 40000 "40 seconds passed" echo